# Claude-Plugin-Marketplace

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
plugins/claude-sentinel/: CLAUDE.md  README.md
plugins/claude-sentinel/.claude-plugin/: plugin.json
plugins/claude-sentinel/skills/access/: SKILL.md
plugins/claude-sentinel/skills/configure/: SKILL.md
plugins/claude-sentinel/skills/deploy-sentinel/: SKILL.md
plugins/claude-sentinel/skills/vps-setup/: SKILL.md
plugins/computer-vision/: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
plugins/computer-vision/.claude-plugin/: plugin.json
plugins/computer-vision/scripts/: build_native.py
plugins/computer-vision/skills/cv-help/: SKILL.md
plugins/computer-vision/skills/cv-setup/: SKILL.md
plugins/computer-vision/src/: __init__.py  __main__.py  config.py  coordinates.py  dpi.py  errors.py  models.py  server.py
plugins/computer-vision/src/adapters/: __init__.py  chrome_cdp.py  office_com.py  shell_com.py
plugins/computer-vision/src/sandbox/: __init__.py
plugins/computer-vision/src/sandbox/adapters/: sandbox_shim.py
plugins/computer-vision/src/sandbox/injection/: dll_injector.py
plugins/computer-vision/src/sandbox/ipc/: protocol.py  shim_ipc_client.py
plugins/computer-vision/src/sandbox/lifecycle/: sandbox_manager.py
plugins/computer-vision/src/sandbox/models/: scene_graph.py
plugins/computer-vision/src/sandbox/native/: CMakeLists.txt
plugins/computer-vision/src/sandbox/native/injector/: main.cpp
plugins/computer-vision/src/sandbox/native/src/: dllmain.cpp  hook_engine.cpp  hook_engine.h  message_injector.cpp  message_injector.h  scene_graph.cpp  scene_graph.h
plugins/computer-vision/src/sandbox/native/src/hooks/: dwrite_hooks.cpp  dwrite_hooks.h  dxgi_hooks.cpp  dxgi_hooks.h  gdi_hooks.cpp  gdi_hooks.h  window_hooks.cpp  window_hooks.h
plugins/computer-vision/src/sandbox/native/src/ipc/: ipc_server.cpp  ipc_server.h  json_helpers.h
plugins/computer-vision/src/sandbox/tests/: test_adapter.py  test_injection_mock.py  test_ipc_protocol.py  test_sandbox_manager.py  test_scene_graph_models.py  test_security.py
plugins/computer-vision/src/tools/: __init__.py  accessibility.py  action.py  capture.py  events.py  find.py  input_keyboard.py  input_mouse.py  monitors.py  ocr.py  record.py  sandbox.py  scene.py  scroll.py  synchronization.py  text_extract.py  uia_interact.py  windows.py
plugins/computer-vision/src/utils/: __init__.py  action_helpers.py  clipboard.py  element_cache.py  events.py  idle_check.py  ocr_engine.py  scene_analysis.py  screenshot.py  security.py  target_resolver.py  uia.py  uia_click.py  uia_patterns.py  verification.py  win32_input.py  win32_window.py
plugins/computer-vision/tests/: conftest.py  live_test_digital_twin.py  live_test_v2.py
plugins/computer-vision/tests/unit/: test_action_router.py  test_adapter_registry.py  test_capture_printwindow.py  test_chrome_cdp.py  test_chromium_accessibility.py  test_clipboard.py  test_config.py  test_coordinates.py  test_dpi.py  test_element_cache.py  test_events.py  test_find.py  test_find_fallback.py  test_find_vision.py  test_focus.py  test_fuzzy_match.py  test_idle_check.py  test_keyboard_hwnd.py  test_models.py  test_ocr_bbox.py  test_ocr_engine.py  test_office_com.py  test_post_action.py  test_sandbox_tools.py  test_scroll.py  test_security.py  test_shell_com.py  test_target_resolver.py  test_text_extract.py  test_uia_patterns.py  test_verification.py
plugins/the-council/: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
plugins/the-council/.claude-plugin/: plugin.json
plugins/the-council/agents/: architect.md  critic.md  curator.md  planner.md  security-auditor.md  strategist.md  ux-reviewer.md  value-analyst.md
plugins/the-council/references/value-realization/: real-cases.md  scoring-rubric.md
plugins/the-council/skills/council-build/: SKILL.md
plugins/the-council/skills/council-consult/: SKILL.md
plugins/the-council/skills/council-init/: SKILL.md
plugins/the-council/skills/council-maintain/: SKILL.md
plugins/the-council/skills/council-reset/: SKILL.md
plugins/the-council/skills/council-setup/: SKILL.md
plugins/the-council/skills/council-status/: SKILL.md
plugins/the-council/skills/council-update/: SKILL.md
plugins/the-council/skills/council-value/: SKILL.md
plugins/the-council/src/: __main__.py  config.py  memory.py  server.py
plugins/the-council/tests/: conftest.py  test_memory_baseline.py  test_memory_features.py
plugins/the-financial-council/: .gitignore  AHE-PRD-v2-StateOfTheArt.md  CLAUDE.md
plugins/the-financial-council/explorer/: collect_cli.py  collector.py  dashboard.py  db.py  requirements.txt
plugins/upwork-scraper/: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
plugins/upwork-scraper/.claude-plugin/: plugin.json
plugins/upwork-scraper/agents/: job-evaluator.md  portfolio-designer.md  profile-reviewer.md  proposal-writer.md  rate-optimizer.md
plugins/upwork-scraper/skills/analyze/: SKILL.md
plugins/upwork-scraper/skills/best-matches/: SKILL.md
plugins/upwork-scraper/skills/portfolio/: SKILL.md
plugins/upwork-scraper/skills/search/: SKILL.md
plugins/upwork-scraper/skills/setup/: SKILL.md
plugins/upwork-scraper/src/: __main__.py  config.py  constants.py  server.py
plugins/upwork-scraper/src/database/: models.py  repository.py
plugins/upwork-scraper/src/models/: analysis.py  job.py  session.py
plugins/upwork-scraper/src/session_manager/: __main__.py  browser.py  captcha.py  manager.py  parser.py  scraper.py
plugins/upwork-scraper/src/tools/: analysis_tools.py  query_tools.py  scraping_tools.py  session_tools.py
