[project]
name = "the-council"
version = "3.1.0-beta"
description = "Adversarial consultation with persistent memory for Claude Code agent teams"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
