[project]
name = "the-council"
version = "3.2.0"
description = "Catch blind spots in architecture decisions with multi-perspective analysis that learns from your project history"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
